--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,14 @@
 }
 
 html, body {
-  background-color: #ffe100;
   font-family: 'Source Code Pro', monospace;
+}
+
+html,
+body,
+nav,
+nav > ul {
+  background-color: #f2e380;
 }
 
 a {
@@ -18,7 +24,6 @@ nav {
   left: 0;
   width: 100%;
   height: 60px;
-  background-color: #ffe100;
 }
 
 nav > a {
@@ -33,7 +38,6 @@ nav > ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  background-color: #ffe100;
   height: 100vh;
 }
 
@@ -43,7 +47,6 @@ nav > ul {
 
 nav > ul > li {
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.1);
 }
 
 nav > ul > li > a {
@@ -74,8 +77,6 @@ h2 {
   display: inline-block;
   margin: 120px 0 30px;
   padding: 10px 20px;
-  /* background-color: #000;
-  color: #fff; */
   font-size: 2em;
   text-transform: uppercase;
 }
@@ -98,7 +99,7 @@ p {
 
 button, .button {
   background-color: crimson;
-  border: 6px solid #54da54;
+  border: 6px solid #67d067;
   color: #fff;
   padding: 10px 20px;
   text-transform: uppercase;
@@ -110,7 +111,7 @@ button, .button {
   margin: 10px;
   padding: 10px;
   border: 10px solid crimson;
-  background-color: #54da54;
+  background-color: #67d067;
   width: 200px;
   height: 200px;
   display: flex;
@@ -120,9 +121,24 @@ button, .button {
 
 #top {
   background-color: beige;
+  background-image: url("campus-utec-lima.png");
+  background-size: cover;
+  background-position: center;
+  -ms-interpolation-mode: nearest-neighbor;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -webkit-crisp-edges;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -o-crisp-edges;
+  image-rendering: pixelated;
+
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#top header {
+  background-color: beige;
+  padding: 2em;
 }
 
 #top p {
@@ -169,7 +185,7 @@ button, .button {
 }
 
 #sponsors {
-  background: #54da54;
+  background-color: #67d067;
 }
 
 .sponsor-tier > div {
@@ -198,7 +214,7 @@ button, .button {
 }
 
 #sponsors .button {
-  border-color: #ffe100;
+  border-color: #f2e380;
 }
 
 #comunidades .avatar {
